--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.13.2",
     "daisyui": "^5.5.8",
     "firebase": "^12.6.0",
-    "framer-motion": "^12.23.25",
+    "framer-motion": "^12.23.26",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
@@ -31,6 +31,7 @@
     "recharts": "^3.6.0",
     "stripe": "^20.1.0",
     "sweetalert2": "^11.26.10",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
